syntax = "proto3";

message Item {
  string id = 1;
  string value = 2;
}

message Candidate {
  int32 start = 1;
  int32 length = 2;
  Item value = 3;
}

message SetupRequest {
  repeated Item source = 1;
}
message SetupResponse {}

message ReadRequest {
  string input = 1;
}
message ReadResponse {
  repeated Candidate candidates = 1;
}